# Mnemos

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  OPTIMIZATIONS.md  README.md  RESUME.md  SECURITY.md  THIRD-PARTY-REFERENCES.md  THIRD-PARTY.md  THIRD_PARTY_NOTICES.md  default.profraw  todo.md
apm/: CMakeLists.txt  README.md
apm/abi/: CMakeLists.txt  apm_plugin_abi.h
apm/bindings/genesis/: CMakeLists.txt  genesis_binding.cpp
apm/host/: CMakeLists.txt  plugin_host.cpp  plugin_host.hpp  tracer_main.cpp
apm/memory/: CMakeLists.txt  bank_registry.cpp  bank_registry.hpp  imemory_allocator.hpp  memory_tag.hpp  page_guard.cpp  page_guard.hpp  tagged_allocator.cpp  tagged_allocator.hpp
apm/memory/tests/: bank_registry_test.cpp  page_guard_proof.cpp  tagged_allocator_test.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  README.md
src/apps/dev/: README.md
src/apps/player/: CMakeLists.txt  README.md  adapter_link.cpp  adapter_link.hpp  amiga_ipf_caps.cpp  amiga_ipf_caps.hpp  debug_dump.cpp  debug_dump.hpp  headless_commands.cpp  headless_commands.hpp  main.cpp  player_audio.cpp  player_audio.hpp  presentation_math.cpp  presentation_math.hpp  system_launch.cpp  system_launch.hpp  text_overlay.cpp  text_overlay.hpp
src/audio/: CMakeLists.txt
src/audio/vgm/: CMakeLists.txt  vgm.cpp  vgm.hpp
src/audio/wav/: CMakeLists.txt  wav.cpp  wav.hpp
src/chips/: CMakeLists.txt  README.md
src/chips/audio/: CMakeLists.txt  README.md
src/chips/bus_controller/: CMakeLists.txt  README.md
src/chips/common/: CMakeLists.txt  README.md
src/chips/cpu/: CMakeLists.txt  README.md
src/chips/mapper/: CMakeLists.txt  README.md
src/chips/peripheral/: CMakeLists.txt
src/chips/shared/: CMakeLists.txt  asset_views.hpp  audio_views.hpp  callbacks.hpp  chip.hpp  chip_registry.cpp  chip_registry.hpp  config.hpp  cpu_catch_up.hpp  cpu_fetch_span.hpp  fm_tables.hpp  ibus.hpp  iec_bus.hpp  introspection_adapters.hpp  introspection_views.hpp  mmio_factory.hpp  predicates.hpp  region.hpp  shared.hpp  state.cpp  state.hpp
src/chips/storage/: CMakeLists.txt  README.md
src/chips/video/: CMakeLists.txt  README.md
src/common/: CMakeLists.txt  hex.hpp  string.hpp
src/common/tests/: hex_test.cpp  string_test.cpp
src/compression/: CMakeLists.txt  deflate.cpp  deflate.hpp  inflate.cpp  inflate.hpp  lzma1.cpp  lzma1.hpp  zip_archive.cpp  zip_archive.hpp
src/compression/tests/: deflate_test.cpp  inflate_test.cpp  lzma1_test.cpp  zip_archive_test.cpp
src/debug/: CMakeLists.txt  README.md  animation_export.cpp  animation_export.hpp  asset_export.cpp  asset_export.hpp  audio_export.cpp  audio_export.hpp  debug_dump.cpp  debug_dump.hpp  debugger.cpp  debugger.hpp  game_watch.hpp  reg_write_log.cpp  reg_write_log.hpp
src/debug/dump/: CMakeLists.txt  asset_export.hpp  audio_export.cpp  capability_discovery.cpp  capability_discovery.hpp  debug_dump.cpp  debug_session.cpp  debug_session.hpp  game_watch.cpp  json_util.hpp  path_id.hpp
src/debug/engine/: CMakeLists.txt
src/debug/scripting_python_ipc/: README.md
src/debug/tests/: animation_export_test.cpp  asset_export_test.cpp  audio_export_test.cpp  debug_dump_test.cpp  debugger_test.cpp  game_watch_test.cpp  reg_write_log_test.cpp
src/disc/: CMakeLists.txt  NOTES.md  chd_reader.cpp  chd_reader.hpp  circ_ecc.cpp  circ_ecc.hpp  disc_image.cpp  disc_image.hpp  flac_decoder.cpp  flac_decoder.hpp
src/disc/tests/: chd_reader_test.cpp  circ_ecc_test.cpp  disc_image_test.cpp  flac_decoder_test.cpp
src/dsp/: CMakeLists.txt  audio_resampler.hpp
src/dsp/tests/: audio_resampler_test.cpp
src/extensions/: CMakeLists.txt
src/extensions/logging/: CMakeLists.txt  ilogger.cpp  ilogger.hpp  log_level.hpp  log_record.hpp  logger_factory.cpp  logger_factory.hpp
src/foundation/: CMakeLists.txt  allocator.hpp  bits.hpp  fs.hpp  log.hpp  sha256.hpp  span_ext.hpp  thread.hpp
src/foundation/tests/: foundation_allocator_test.cpp  foundation_bits_test.cpp  foundation_crc32_test.cpp  foundation_expected_ext_test.cpp  foundation_fs_test.cpp  foundation_id_test.cpp  foundation_log_test.cpp  foundation_sha256_test.cpp  foundation_smoke_test.cpp  foundation_span_ext_test.cpp  foundation_thread_test.cpp  foundation_time_test.cpp
src/frontend_sdk/: CMakeLists.txt  README.md  adapter_registry.cpp  adapter_registry.hpp  player_system.hpp  scheduler_factory.cpp  scheduler_factory.hpp
src/frontend_sdk/tests/: adapter_registry_test.cpp  player_system_test.cpp  scheduler_factory_test.cpp
src/graphics/images/: CMakeLists.txt  gif_image.cpp  gif_image.hpp  image.cpp  image.hpp  png_image.cpp  png_image.hpp  ppm_image.cpp  ppm_image.hpp
src/instrumentation/: CMakeLists.txt  README.md
src/instrumentation/api/: CMakeLists.txt  README.md  debugger.cpp  debugger.hpp
src/instrumentation/scripting_lua/: README.md
src/instrumentation/wire/: README.md
src/io/: CMakeLists.txt  file.cpp  file.hpp
src/io/tests/: file_test.cpp
src/manifests/: CMakeLists.txt  README.md
src/manifests/amiga/: CMakeLists.txt  README.md  amiga_memory_sizes.hpp  amiga_system.cpp  amiga_system.hpp
src/manifests/amiga500/: CMakeLists.txt  amiga500_system.cpp  amiga500_system.hpp
src/manifests/c64/: CMakeLists.txt  README.md  ROMS.md  c64.ntsc.toml  c64.pal.toml  c64_callbacks.cpp  c64_callbacks.hpp  c64_embedded_manifests.hpp.in  c64_input.cpp  c64_input.hpp  c64_manifests.hpp  c64_runtime.cpp  c64_runtime.hpp  c64_system.cpp  (+1 more)
src/peripheral/: CMakeLists.txt
src/runtime/: CMakeLists.txt  README.md  input.cpp  machine_save.cpp  machine_save.hpp  rewind.cpp  save_state.cpp  save_state.hpp  scheduler.cpp  scheduler.hpp  session.cpp  session.hpp
src/security/: CMakeLists.txt
src/text/: CMakeLists.txt  decoding.cpp  decoding.hpp  encoding.cpp  encoding.hpp
src/topology/: CMakeLists.txt  README.md  bus.cpp  bus.hpp
tools/amiga_eval_probe/: CMakeLists.txt  main.cpp
tools/mnemos_runtime_cli/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp
(+1616 files in other folders)
