add_subdirectory(foundation)
add_subdirectory(extensions)
add_subdirectory(common)
add_subdirectory(compression)
add_subdirectory(security)
add_subdirectory(text)
add_subdirectory(io)
add_subdirectory(dsp)
add_subdirectory(graphics)
add_subdirectory(chips)
add_subdirectory(peripheral_sdk)
add_subdirectory(topology)
add_subdirectory(manifests)
add_subdirectory(runtime)
add_subdirectory(instrumentation)
add_subdirectory(frontend_sdk)
add_subdirectory(debug)
add_subdirectory(apps)
